components/Sidebar.module.scss
.container {
    display: flex;
    flex-direction: column;
    padding: 41px 45px;
    box-sizing: border-box;
}

.row {
    align-self: center;
    margin-bottom: 35px;
    width: 100%;

    &:last-of-type {
        margin-bottom: 0;
    }

}

.shadow {
    filter: drop-shadow(6px 8px 10px rgba(123, 97, 255, 0.2));
}

.header {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}

